--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -9,52 +9,52 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
 <body>
-	<div id="primary">
-		<h1>
-			<div class="row-fluid">
-				<div class="span12">
-					A Game of Tic Tac Toe
-				</div>
+	<h1>
+		<div>
+			<div id="title">
+				Tic Tac Toe
 			</div>
-		</h1>
-	<!-- 	<div class="row-fluid">
-				<div class="span3">
-					Total Moves
-			</div> -->
-			</ul> 
-			<div class="container">
-			<button type="button" class="btn btn-primary" class="data-toggle" data-target="#modal-1">Instructions</button>
-				<div class="modal" id="modal-1">
-					<div class="modal-dialog">
-						<div class="modal-content">
-	<!-- 					<div class="modal-header">
-								<button type="button" class="close data-dismiss="modal">&times;</button>
-									<h3 class="modal-title></h3>
-							</div> -->
-							<div class="modal-body">Instructions go here</div>
-							
+		</div>
+	</h1>
+<!-- 	<div class="row-fluid">
+			<div class="span3">
+				Total Moves
+		</div> -->
+		</ul> 
+		<div class="container">
+		<button type="button" class="btn btn-success" data-toggle="modal" data-target="#modal-1">Instructions</button>
+			<div class="modal" id="modal-1">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close data-dismiss="modal"></button>
+								<h2 class="modal-title">Salutations! Here are some Rules</h2>   <h3 class="modal-title></h3>
 						</div>
+						<div class="modal-body">O will always start first. To reset the game please click Reset or click on a tile.</div>
 					</div>
 				</div>
 			</div>
-			<div  class="row-fluid" id="tic-tac-toe">
-				<ul class="list-inline" id="matrix"> <!-- add "row" for media query, "list-inline for list" -->
-					<li id="one" class="button">=</li>
-					<li id="two" class="button">=</li>
-					<li id="three" class="button">=</li>
-					<li id="four" class="button">=</li>
-					<li id="five" class="button">=</li>
-					<li id="six" class="button">=</li>
-					<li id="seven" class="button">=</li>
-					<li id="eight" class="button">=</li>
-					<li id="nine" class="button">=</li>
-				</ul>
-				<button type="button" class="btn btn-danger" id="reset">Reset</button>
-			</div>
-		
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-		<script type="text/javascript" src="tictactoe.js"></script>
-	</div>
+		</div>
+		<div  class="row-fluid" id="tic-tac-toe">
+			<ul class="list-inline" id="matrix">
+				<li id="one" class="button">=</li>
+				<li id="two" class="button">=</li>
+				<li id="three" class="button">=</li>
+			</ul>
+			<ul class="list-inline" id="matrix"> 
+				<li id="four" class="button">=</li>
+				<li id="five" class="button">=</li>
+				<li id="six" class="button">=</li>
+			</ul>
+			<ul class="list-inline" id="matrix"> 
+				<li id="seven" class="button">=</li>
+				<li id="eight" class="button">=</li>
+				<li id="nine" class="button">=</li>
+			</ul>
+			<button type="button" class="btn btn-danger" id="reset">Reset</button>
+		</div>
+
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="tictactoe.js"></script>
 </body>
 </html>
